Fix overflow on the main area for iOS.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -62,7 +62,8 @@ header {
   /* display: flex; */
   position: relative;
   flex: 1 1 auto;
-  height: 1px;
+  overflow-y: auto;
+  /* height: 1px; */
 }
 aside {
   /* background: #f3f3f3; */
@@ -75,7 +76,7 @@ aside {
 main {
   background: white;
   overflow-y: auto;
-  height: 100%;
+  max-height: 100%;
   /* width: 100%; */
 }
 
@@ -128,6 +129,7 @@ section.grid {
 // player component
 footer {
   display: flex;
+  flex: none;
   height: 60px;
 
   background: white;
